--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "mongodb": "^3.2.5",
+    "mongoose": "^5.5.10"
   }
 }
