--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "currency.js": "^1.2.1",
     "express": "^4.17.0",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10"
