--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.0",
+    "apollo-server-express": "^2.6.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.4",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10"
   }
