--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
     "graphql-tools": "^4.0.4",
+    "line-by-line": "^0.1.6",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10"
   }
